onek-backend/src/snapshots/onek_backend__tests__bump_shallow.snap
---
source: onek-backend/src/tests.rs
expression: info.to_snapshot()
---
player_loc: (2, 1)
view:
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????####????????
????????#.@#????????
????????####????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????

notes:
0) [Environmental] You splash through the water.


