onek-backend/src/snapshots/onek_backend__tests__bump_wall.snap
---
source: onek-backend/src/tests.rs
expression: info.to_snapshot()
---
player_loc: (1, 1)
view:
####
#@.#
####

notes:
0) [Error] You bounce off the wall.


