onek-backend/src/snapshots/onek_backend__tests__from_str.snap
---
source: onek-backend/src/tests.rs
expression: info.to_snapshot()
---
player_loc: (1, 1)
view:
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
?????????###????????
?????????#@#????????
?????????###????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????

notes:


