onek-backend/src/snapshots/onek_backend__tests__los.snap
---
source: onek-backend/src/tests.rs
expression: info.to_snapshot()
---
player_loc: (4, 2)
view:
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
??????############??
??????#..........#??
??????#...@...#?????
??????#...#......#??
??????####?#######??
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????
????????????????????

notes:


